--- a/manifest.json
+++ b/manifest.json
@@ -5,5 +5,43 @@
     "background_color": "#1a4f79",
     "display": "standalone",
     "orientation": "portrait",
-    "start_url": "."
+    "start_url": ".",
+    "icons": [
+        {
+            "src": "/icons/MusLogo-96.png",
+            "sizes": "96x96",
+            "type": "image/png"
+        },
+        {
+            "src": "/icons/MusLogo-128.png",
+            "sizes": "128x128",
+            "type": "image/png"
+        },
+        {
+            "src": "/icons/MusLogo-256.png",
+            "sizes": "256x256",
+            "type": "image/png"
+        },
+        {
+            "src": "/icons/MusLogo-512.png",
+            "sizes": "512x512",
+            "type": "image/png"
+        }
+    ],
+    "screenshots": [
+        {
+            "src": "./icons/MusLogo-320.svg",
+            "sizes": "320x320",
+            "type": "image/svg",
+            "form_factor": "wide",
+            "label": "Application"
+        },
+        {
+            "src": "./icons/MusLogo-320.svg",
+            "sizes": "320x320",
+            "type": "image/svg",
+            "form_factor": "narrow",
+            "label": "Application"
+        }
+    ]
 }
